--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Kalkulator Sederhana</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
