Uji CI/CD: Mengubah judul halaman dan menambah teks versi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Kalkulator Sederhana</title>
+    <title>Kalkulator CI/CD Keren</title>
 
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -51,6 +51,10 @@
         <button onclick="appendToDisplay('0')" class="zero">0</button>
 
         <button onclick="appendToDisplay('.')">.</button>
+
+        <p style="color: white; font-size: 0.8em; margin-top: 10px">
+          Versi CI/CD v1.1
+        </p>
       </div>
     </div>
 
