--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Kalkulator CI/CD Keren</title>
+    <title>Kalkulator CI/CD Ihsan Maulana</title>
 
     <link rel="stylesheet" href="styles.css" />
   </head>
